# cmake-lib

./: .clang-format  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
doc/src/: api.rst
include/add/: add.h
prg/: CMakeLists.txt  prg_add.c  prg_sub.c
src/: CMakeLists.txt  add.c  version.h.in
test/: CMakeLists.txt  test_add_integer.c  test_add_integer_neg.c
